[metadata]
description-file = README.md

[pycodestyle]
max-line-length = 160

[pylama]
ignore = D400,D401,D212,D203
skip = */.tox/*,*/.env/* */test/*
linters = pylint,mccabe,pycodestyle,pydocstyle,pyflakes,radon

[pylama:pycodestyle]
max_line_length = 160

[flake8]
max-line-length = 160
max-complexity = 10
